Fixed details editing and horizontal scroll.

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -22,7 +22,7 @@ Container
 -------------------------------------------------------------------------------- */
 
 .container {
-  padding: 20px;
+  padding: 0;
 }
 
 /* --------------------------------------------------------------------------------
