--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -7,7 +7,7 @@
   z-index: 10;
 
   margin: 0 0 ;
-  padding: 10px;
+  padding: 5px 0;
   background-color: #09074B;
   width: 100%;
   overflow: hidden;
